apps/ingress/ingress.generic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wap-ingress
spec:
  rules:
  - host: wap.devops.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: api
          servicePort: 8080
      - path: /admin
        backend:
          serviceName: admin
          servicePort: 8080
      - path: /
        backend:
          serviceName: game
          servicePort: 8080
